vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production-http01
spec:
  tls:
    - hosts:
        - vault.oddbit.com
      secretName: vault-tls
  rules:
    - host: vault.oddbit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  name: vault-api
